refactor(cli): move nxz CLI to packages/nxz/ and bump to v3.2.0
- Move src/cli/nxz.ts → packages/nxz/src/nxz.ts with import transforms
- Replace inline TarEntry (5 fields) with import type from tar-xz (13 fields)
- Replace inline TarXzModule with typeof import('tar-xz')
- Use package imports (node-liblzma, node-liblzma/wasm) instead of relative paths
- Use import.meta.resolve for WASM binary path resolution
- Add WASM subpath exports with types conditions to root package.json
- Remove bin field and ./cli export from root package (moved to nxz-cli)
- Move CLI test to packages/nxz/test/ with updated paths
- Update publish.yml to build workspace packages
- Bump all 3 packages from 3.1.2 → 3.2.0

--- a/docs/historic/done-2026-02.md
+++ b/docs/historic/done-2026-02.md
@@ -49,3 +49,12 @@
 - [x] ✅ **[WASM] Block 8:** Documentation & Release (2026-02-01)
 - [x] ✅ **[WASM]** /review + /finalize → v3.0.0 (2026-02-01)
 - [x] ✅ **CLI-NXZ** Build `nxz` CLI tool (2026-01-25)
+
+## Archived on 2026-02-28 (from /finalize: CLI-NXZ-MIGRATION)
+
+- [x] ✅ [Lint] Audit nouvelles règles biome 2.4.0 après merge PR #65 (2026-02-28)
+- [x] ✅ [Tests] Réorganiser les 23 fichiers de test en sous-dossiers (unit/, integration/, native/, cli/, exports/) (2026-02-27)
+- [x] ⏭️ [CLI] Contrat compile-time CLI → tar-xz — reverted (build-order circular dep) (2026-02-28)
+- [x] ✅ [CLI] Déplacer src/cli/nxz.ts → packages/nxz/src/ pour casser le cycle de build et activer import type from 'tar-xz' (2026-02-28)
+- [x] ✅ [Config] Bumper engines.node >=16 → >=20 dans les 3 packages (2026-02-27)
+- [x] ✅ [Deps] Merge PR #65 — biome 2.4.0, @types/node, typedoc (2026-02-27)
